web/css/style-liveres.css
/* ... */
.navbtn:hover,
div.dt-buttons>.dt-button:hover {
  background: gray;
}

/* Misc */
.selectControl {
  cursor: pointer;
}

.numrunners {
  border-spacing: 10px 0;
  text-align: left;
}

.numrunners td {
  font-size: .7em;
  color: gray;
}

/* Class/results layout */
.container {
  display: flex;
}

.class-column {
  flex: 1;
  position: relative;
  display: inline-block;
  z-index: 100;
  line-height: 1.4em;
  font-size: 1.3em;
  max-width: 8em;
  min-width: 8em;
}

.class-column.unpinned {
  max-width: 0 !important;
  min-width: 0 !important;
}

.class-column-content {
  box-sizing: border-box;
  position: relative;
  top: 3px;
  left: 0;
  color: #FFF;
  background: var(--bkdark);
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 101;
  padding: 3px 3px 3px 10px;
  min-width: 8em;
  max-width: 8em;
}

.class-column-content a {
  color: #FFF;
}

.class-column-content::-webkit-scrollbar {
  width: 0;
  height: 0;
}

.class-column-content.unpinned {
  opacity: .9;
  box-shadow: 4px 8px 16px rgba(0, 0, 0, .3);
}

.class-column-content.unpinned.closed {
  display: none;
}

.class-column-content.unpinned.open {
  display: block;
}

.lock {
  position: absolute;
  top: 3px;
  right: 3px;
  color: #FFF;
  font-size: 1em;
  cursor: pointer;
  z-index: 102;
}

.lockunpinned {
  color: lightgrey;
}

.result-column {
  flex: 2;
  display: inline-block;
  padding-left: 3px;
  width: calc(100vw - 15em);
  box-sizing: border-box;
  overflow-x: hidden;
}

/*-----------------------------------*/
/*---  Mofification of DataTables ---*/
/*-----------------------------------*/
table.dataTable>thead>tr>th,
table.dataTable>thead>tr>td {
  padding: 3px 7px 3px 3px;
  cursor: pointer;
  white-space: nowrap;
  background-color: white;
  border-bottom: black 1px solid;
}

table.dataTable thead tr>.dtfc-fixed-start,
table.dataTable thead tr>.dtfc-fixed-end,
table.dataTable tfoot tr>.dtfc-fixed-start,
table.dataTable tfoot tr>.dtfc-fixed-end {
  background-color: white;
}

table.dataTable tbody tr>.dtfc-fixed-start,
table.dataTable tbody tr>.dtfc-fixed-end {
  background-color: white;
}

table.dataTable>tbody>tr>th,
table.dataTable>tbody>tr>td {
  padding: 3px 7px 3px 3px;
  background-color: white;
}

table.dataTable>tbody>tr:nth-child(odd)>* {
  box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0.08);
  border-top: 1px solid rgb(220, 220, 220)
}

table.dataTable>tbody>tr:nth-child(even)>* {
  box-shadow: inset 0 0 0 9999px rgba(0, 0, 0, 0);
  border-top: 1px solid white;
}

div.dt-container div.dt-layout-row {
  margin: 0 0;
}

table.dataTable tbody td {
  vertical-align: top;
}

table.dataTable tbody tr>.sorting_1,
table.dataTable tbody tr>.sorting_2,
table.dataTable tbody tr>.sorting_3 {
  background-color: #fff8e3;
}

table.dataTable thead>tr>th.dt-orderable-asc,
table.dataTable thead>tr>th.dt-orderable-desc,
table.dataTable thead>tr>th.dt-ordering-asc,
table.dataTable thead>tr>th.dt-ordering-desc,
table.dataTable thead>tr>td.dt-orderable-asc,
table.dataTable thead>tr>td.dt-orderable-desc,
table.dataTable thead>tr>td.dt-ordering-asc,
table.dataTable thead>tr>td.dt-ordering-desc {
  color: var(--livered);
}

/*---  Mofification of DataTables Button ---*/
div.dt-button-collection {
  background-color: var(--bkdark);
  font-size: 1.3em;
  line-height: 1.4em;
  width: 8em;
}

div.dt-buttons>.dt-button {
  border: none;
  background-color: black;
  font-size: 1.3em;
  cursor: pointer;
  display: inline-block;
  color: white;
  width: 1.5em;
  height: 1.5em;
  border-radius: 0.3em;
  padding: 0;
  margin-right: auto;
  margin-bottom: 0;
  line-height: normal;
}

div.dt-buttons>.dt-button:hover {
  background: gray;
}

